@@ -1,5 +1,7 @@
 2009-11-25  Jan Djärv  <jan.h.d@swipnet.se>
 
+	* term.c (delete_tty): Remove check for last terminal (bug#4970).
+
 	* xsettings.c: Revert changes from 2009-11-23. Just use Xft
 	defaults (bug #5025).
 
